--- a/c_wrapper/CMakeLists.txt
+++ b/c_wrapper/CMakeLists.txt
@@ -32,7 +32,7 @@ endfunction()
 set(C_HEADERS_GRAPHICS include/clambdacommon/graphics/color.h)
 set(C_HEADERS_MATHS include/clambdacommon/maths/geometry/point.h include/clambdacommon/maths/geometry/vector.h)
 set(C_HEADERS_SYSTEM include/clambdacommon/system/os.h include/clambdacommon/system/terminal.h include/clambdacommon/system/system.h include/clambdacommon/system/time.h)
-set(C_HEADERS_BASE include/clambdacommon/clambdacommon.h include/clambdacommon/lstring.h include/clambdacommon/maths.h include/clambdacommon/resources.h)
+set(C_HEADERS_BASE include/clambdacommon/clambdacommon.h include/clambdacommon/lstring.h include/clambdacommon/maths.h include/clambdacommon/resources.h include/clambdacommon/types.h)
 set(C_HEADERS_FILES ${C_HEADERS_GRAPHICS} ${C_HEADERS_MATHS} ${C_HEADERS_SYSTEM} ${C_HEADERS_BASE})
 # This is the C sources files.
 set(C_SOURCES_GRAPHICS src/graphics/color.cpp)
@@ -40,32 +40,33 @@ set(C_SOURCES_SYSTEM src/system/os.cpp src/system/terminal.cpp src/system/system
 set(C_SOURCES_BASE src/clambdacommon.cpp src/lstring.cpp src/maths.cpp src/resources.cpp)
 set(C_SOURCES_FILES ${C_SOURCES_GRAPHICS} ${C_SOURCES_SYSTEM} ${C_SOURCES_BASE})
 
-generate_template_wrapper(point int8_t)
-generate_template_wrapper(point uint8_t)
-generate_template_wrapper(point int16_t)
-generate_template_wrapper(point uint16_t)
-generate_template_wrapper(point int32_t)
-generate_template_wrapper(point uint32_t)
-generate_template_wrapper(point int64_t)
-generate_template_wrapper(point uint64_t)
-generate_template_wrapper(point float)
-generate_template_wrapper(point double)
-generate_template_wrapper(vector int8_t)
-generate_template_wrapper(vector uint8_t)
-generate_template_wrapper(vector int16_t)
-generate_template_wrapper(vector uint16_t)
-generate_template_wrapper(vector int32_t)
-generate_template_wrapper(vector uint32_t)
-generate_template_wrapper(vector int64_t)
-generate_template_wrapper(vector uint64_t)
-generate_template_wrapper(vector float)
-generate_template_wrapper(vector double)
+generate_template_wrapper(point i8)
+generate_template_wrapper(point u8)
+generate_template_wrapper(point i16)
+generate_template_wrapper(point u16)
+generate_template_wrapper(point i32)
+generate_template_wrapper(point u32)
+generate_template_wrapper(point i64)
+generate_template_wrapper(point u64)
+generate_template_wrapper(point f32)
+generate_template_wrapper(point f64)
+generate_template_wrapper(vector i8)
+generate_template_wrapper(vector u8)
+generate_template_wrapper(vector i16)
+generate_template_wrapper(vector u16)
+generate_template_wrapper(vector i32)
+generate_template_wrapper(vector u32)
+generate_template_wrapper(vector i64)
+generate_template_wrapper(vector u64)
+generate_template_wrapper(vector f32)
+generate_template_wrapper(vector f64)
 
 # Now build the library
 # Build the shared library
 add_library(clambdacommon ${C_HEADERS_FILES} ${C_SOURCES_FILES})
 target_link_libraries(clambdacommon lambdacommon)
 
+target_include_directories(clambdacommon PUBLIC "include")
 target_include_directories(clambdacommon PUBLIC "${CMAKE_BINARY_DIR}/c_wrapper/exports")
 
 # Install if the option is on.
