--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #
-# AperLambda ignore file
+# LambdAurora's ignore file
 #
-# v0.8
+# v0.12
 
 # JetBrains
 .idea/
@@ -41,6 +41,10 @@ node_modules/
 logs/
 
 # Languages
+## Java
+classes/
+## Python
+__pycache__/
 ## Rust
 **/*.rs.bk
 
@@ -54,6 +58,7 @@ desktop.ini
 *.dylib
 *.lib
 lib*.a
+*.png~
 
 # Common
 bin/
